@@ -1,3 +1,8 @@
+2018-01-29  Palmer Dabbelt  <palmer@sifive.com>
+
+	* sysdeps/init_array/crti.S (.section .init_array): Add
+	PREINIT_FUNCTION when defined.
+
 2018-01-29  Romain Naour  <romain.naour@gmail.com>  (tiny change)
 
 	* sysdeps/unix/sysv/linux/microblaze/kernel-features.h
